Fixing script fileS

--- a/stats.html
+++ b/stats.html
@@ -188,6 +188,7 @@
             </div>
           </div>
         </div>
+	<div id="month-estimate"></div>
         <h2>Path to 1PB</h2>
         <div id="pb-container">
           <div class="progressbar">
@@ -227,11 +228,8 @@
       </div>
     </footer>
     <script src="js/vendors/moment.min.js"></script>
-    <script src="js/month.js"></script>
-    <script src="js/day.js"></script>
-    <script src="js/hour.js"></script>
     <script src="js/updated.js"></script>
-    <script src="js/total.js"></script>
+    <script src="js/statsData.js"></script>
     <script src="js/stats.js"></script>
   </body>
 </html>
