Adding links to images on frontpage

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <hr>
         <div class="row mid">
           <div class="col col--1-of-3">
-            <div class="img-container"><img src="img/debian_logo.svg"></div>
+            <div class="img-container"><a href="distributions.html"><img src="img/ubuntu-logo32.png"></a></div>
             <h2>Linux Distros</h2>
             <p>
               We host around 20 distributions including Debian, Ubuntu, Arch Linux, Linux Mint,
@@ -85,7 +85,7 @@
             </p>
           </div>
           <div class="col col--1-of-3">
-            <div class="img-container"><img src="img/blender-plain.png"></div>
+            <div class="img-container"><a href="software.html"><img src="img/blender-plain.png"></a></div>
             <h2>Software</h2>
             <p>
               We also host a variety of software including Blender, GNU, Clonezilla, Cygwin, and many others. you can
@@ -93,9 +93,9 @@
             </p>
           </div>
           <div class="col col--1-of-3">
-            <div class="img-container"><img src="img/tux.png"></div>
+            <div class="img-container"><a href="/linux"><img src="img/tux.png"></a></div>
             <h2>Linux Kernel</h2>
-            <p>Versions of the Linux Kernel (Up to 4.5.X) can also be found on the <a href="software.html">Software</a>
+            <p>Versions of the Linux Kernel can also be found on the <a href="software.html">Software</a>
               page, found in the same place is documentation and souce for the kernel.
               
             </p>
