added ROS to software page

--- a/software.html
+++ b/software.html
@@ -126,6 +126,9 @@
               <a href="#odroid">Odroid Packages</a>
             </li>
             <li>
+              <a href="#ros">ROS</a>
+            </li>
+            <li>
               <a href="#tdf">The Document Foundation</a>
             </li>
             <li>
@@ -273,6 +276,16 @@
             <br>
             <h5>Homepage:</h5>
             <a href="http://www.hardkernel.com/main/main.php">http://www.hardkernel.com/main/main.php</a>
+          </section>
+          <section id="ros">
+            <h3>ROS</h3>
+            <h5>HTTP:</h5>
+            <a href="./ros/">http://mirror.clarkson.edu/ros/</a>
+            <br>
+            <h5>Frequency of Updates:</h5>Every 6 hours
+            <br>
+            <h5>Homepage:</h5>
+            <a href="http://www.ros.org/">http://www.ros.org/</a>
           </section>
           <section id="tdf">
             <h3>The Document Foundation (Including LibreOffice)</h3>
