Changed TDF header to LibreOffice for ease of access

--- a/software.html
+++ b/software.html
@@ -129,7 +129,7 @@
               <a href="#ros">ROS</a>
             </li>
             <li>
-              <a href="#tdf">The Document Foundation</a>
+              <a href="#tdf">LibreOffice</a>
             </li>
             <li>
               <a href="#vlc">VLC</a>
@@ -282,13 +282,13 @@
             <h5>HTTP:</h5>
             <a href="./ros/">http://mirror.clarkson.edu/ros/</a>
             <br>
-            <h5>Frequency of Updates:</h5>Every 6 hours
+            <h5>Frequency of Updates:</h5>4 times daily
             <br>
             <h5>Homepage:</h5>
             <a href="http://www.ros.org/">http://www.ros.org/</a>
           </section>
           <section id="tdf">
-            <h3>The Document Foundation (Including LibreOffice)</h3>
+            <h3>LibreOffice</h3>
             <h5>HTTP:</h5>
             <a href="./tdf/">http://mirror.clarkson.edu/tdf/</a>
             <br>
