Added Historical Stats & Path to 5PB

--- a/stats.html
+++ b/stats.html
@@ -215,7 +215,13 @@
         </div>
       </div>
       <div id="month-estimate"></div>
-      <h2>Path to 1PB</h2>
+      <h2>Historical Stats</h2>
+      <div class="histStats">
+        <li>Clarkson Mirror Started: October 2002</li>
+        <li>Current Mirror booted up for first time: April 2016</li>
+        <li>1.0PB reached on New Mirror: January 5, 2018 at 6pm EST</li>
+      </div>
+      <h2>Path to 5PB</h2>
       <div id="pb-container">
         <div class="progressbar">
           <div class="progressbar--filled"></div>
