--- a/stats.html
+++ b/stats.html
@@ -215,6 +215,8 @@
         </div>
       </div>
       <div id="month-estimate"></div>
+      <h2>All-time stats</h2>
+      <div id="alltimeStats"></div>
       <h2>Historical Stats</h2>
       <div class="histStats">
         <li>Clarkson Mirror Started: October 2002</li>
