--- a/stats.html
+++ b/stats.html
@@ -248,6 +248,12 @@
         <div class="table-content" id="hour-table"></div>
       </div>
       <h2>Distro Usage</h2>
+      <div id="distusage">
+        <div id="distusage-chart"></div>
+        <div id="distusage-table" class="table-content">
+          <div class="graph-options">Yesterday</div>
+        </div>
+      </div>
       <p>View daily bandwidth stats categorized to each repository for distros / software.</p>
       <a href="/distrousage/distrousage_latest.txt">Latest</a>
       <br>
