Noting on Software page what mirrors are official

--- a/software.html
+++ b/software.html
@@ -138,7 +138,7 @@
         </div>
         <div class="col col--3-of-4 software-section">
           <section id="blender">
-            <h3>Blender</h3>
+            <h3>Blender (Official Mirror)</h3>
             <h5>HTTP:</h5>
             <a href="./blender/">http://mirror.clarkson.edu/blender/</a>
             <br>
@@ -188,7 +188,7 @@
             <a href="http://ctan.org/">http://www.ctan.org/</a>
           </section>
           <section id="cygwin">
-            <h3>Cygwin</h3>
+            <h3>Cygwin (Official Mirror)</h3>
             <h5>HTTP:</h5>
             <a href="./cygwin/">http://mirror.clarkson.edu/cygwin/</a>
             <br>
@@ -278,7 +278,7 @@
             <a href="http://www.hardkernel.com/main/main.php">http://www.hardkernel.com/main/main.php</a>
           </section>
           <section id="ros">
-            <h3>ROS</h3>
+            <h3>ROS (Official Mirror)</h3>
             <h5>HTTP:</h5>
             <a href="./ros/">http://mirror.clarkson.edu/ros/</a>
             <br>
@@ -288,7 +288,7 @@
             <a href="http://www.ros.org/">http://www.ros.org/</a>
           </section>
           <section id="tdf">
-            <h3>LibreOffice</h3>
+            <h3>LibreOffice (Official Mirror)</h3>
             <h5>HTTP:</h5>
             <a href="./tdf/">http://mirror.clarkson.edu/tdf/</a>
             <br>
@@ -304,7 +304,7 @@
             <a href="http://www.documentfoundation.org/">http://www.documentfoundation.org/</a>
           </section>
           <section id="vlc">
-            <h3>VLC</h3>
+            <h3>VLC (Offical Mirror)</h3>
             <h5>HTTP:</h5>
             <a href="./videolan/">http://mirror.clarkson.edu/videolan/</a>
             <br>
