--- a/stats.html
+++ b/stats.html
@@ -86,178 +86,196 @@
       </ul>
     </div>
   </nav>
-  <div class="content">
+  <div class="content stats-content">
     <div class="container">
-      <h1>Statistics</h1>
-      <p>Statistics for this iteration of Mirror have been collected since April 24, 2016.</p>
-      <h2>General Statistics</h2>
-      <h3 id="updated"></h3>
-      <div class="grid">
-        <div class="grid-section" id="today_stats">
-          <div class="radial">
-            <svg class="donut" width="100" height="100%" viewbox="0 0 42 42">
-              <circle class="donut-hole" cx="21" cy="21" r="15.91549430918952" fill="#fff"></circle>
-              <circle class="donut-ring" cx="21" cy="21" r="15.91549430918952" fill="transparent" stroke="#E0E0E0"></circle>
-              <circle class="donut-segment" cx="21" cy="21" r="15.91549430918952" fill="transparent"></circle>
-              <circle class="donut-segment" cx="21" cy="21" r="15.91549430918952" fill="transparent"></circle>
-            </svg>
+      <div class="stats-card">
+        <h1>Statistics</h1>
+        <p>Statistics for this iteration of Mirror have been collected since April 24, 2016.</p>
+      </div>
+      <div class="stats-card">
+        <h2>General Statistics</h2>
+        <h3 id="updated"></h3>
+        <div class="grid">
+          <div class="grid-section" id="today_stats">
+            <div class="radial">
+              <svg class="donut" width="100" height="100%" viewbox="0 0 42 42">
+                <circle class="donut-hole" cx="21" cy="21" r="15.91549430918952" fill="#fff"></circle>
+                <circle class="donut-ring" cx="21" cy="21" r="15.91549430918952" fill="transparent" stroke="#E0E0E0"></circle>
+                <circle class="donut-segment" cx="21" cy="21" r="15.91549430918952" fill="transparent"></circle>
+                <circle class="donut-segment" cx="21" cy="21" r="15.91549430918952" fill="transparent"></circle>
+              </svg>
+            </div>
+            <div class="content">
+              <h4></h4>
+              <table>
+                <tr>
+                  <td>rx</td>
+                  <td class="rx"></td>
+                </tr>
+                <tr>
+                  <td>tx</td>
+                  <td class="tx"></td>
+                </tr>
+                <tr>
+                  <td>=</td>
+                  <td class="total"></td>
+                </tr>
+                <tr>
+                  <td class="rate" colspan="2"></td>
+                </tr>
+              </table>
+            </div>
           </div>
-          <div class="content">
-            <h4></h4>
-            <table>
-              <tr>
-                <td>rx</td>
-                <td class="rx"></td>
-              </tr>
-              <tr>
-                <td>tx</td>
-                <td class="tx"></td>
-              </tr>
-              <tr>
-                <td>=</td>
-                <td class="total"></td>
-              </tr>
-              <tr>
-                <td class="rate" colspan="2"></td>
-              </tr>
-            </table>
+          <div class="grid-section" id="yesterday_stats">
+            <div class="radial">
+              <svg class="donut" width="100" height="100%" viewbox="0 0 42 42">
+                <circle class="donut-hole" cx="21" cy="21" r="15.91549430918952" fill="#fff"></circle>
+                <circle class="donut-ring" cx="21" cy="21" r="15.91549430918952" fill="transparent" stroke="#E0E0E0"></circle>
+                <circle class="donut-segment" cx="21" cy="21" r="15.91549430918952" fill="transparent"></circle>
+                <circle class="donut-segment" cx="21" cy="21" r="15.91549430918952" fill="transparent"></circle>
+              </svg>
+            </div>
+            <div class="content">
+              <h4></h4>
+              <table>
+                <tr>
+                  <td>rx</td>
+                  <td class="rx"></td>
+                </tr>
+                <tr>
+                  <td>tx</td>
+                  <td class="tx"></td>
+                </tr>
+                <tr>
+                  <td>=</td>
+                  <td class="total"></td>
+                </tr>
+                <tr>
+                  <td class="rate" colspan="2"></td>
+                </tr>
+              </table>
+            </div>
+          </div>
+          <div class="grid-section" id="month_stats">
+            <div class="radial">
+              <svg class="donut" width="100" height="100%" viewbox="0 0 42 42">
+                <circle class="donut-hole" cx="21" cy="21" r="15.91549430918952" fill="#fff"></circle>
+                <circle class="donut-ring" cx="21" cy="21" r="15.91549430918952" fill="transparent" stroke="#E0E0E0"></circle>
+                <circle class="donut-segment" cx="21" cy="21" r="15.91549430918952" fill="transparent"></circle>
+                <circle class="donut-segment" cx="21" cy="21" r="15.91549430918952" fill="transparent"></circle>
+              </svg>
+            </div>
+            <div class="content">
+              <h4></h4>
+              <table>
+                <tr>
+                  <td>rx</td>
+                  <td class="rx"></td>
+                </tr>
+                <tr>
+                  <td>tx</td>
+                  <td class="tx"></td>
+                </tr>
+                <tr>
+                  <td>=</td>
+                  <td class="total"></td>
+                </tr>
+                <tr>
+                  <td class="rate" colspan="2"></td>
+                </tr>
+              </table>
+            </div>
+          </div>
+          <div class="grid-section" id="prev_month_stats">
+            <div class="radial">
+              <svg class="donut" width="100" height="100%" viewbox="0 0 42 42">
+                <circle class="donut-hole" cx="21" cy="21" r="15.91549430918952" fill="#fff"></circle>
+                <circle class="donut-ring" cx="21" cy="21" r="15.91549430918952" fill="transparent" stroke="#E0E0E0"></circle>
+                <circle class="donut-segment" cx="21" cy="21" r="15.91549430918952" fill="transparent"></circle>
+                <circle class="donut-segment" cx="21" cy="21" r="15.91549430918952" fill="transparent"></circle>
+              </svg>
+            </div>
+            <div class="content">
+              <h4></h4>
+              <table>
+                <tr>
+                  <td>rx</td>
+                  <td class="rx"></td>
+                </tr>
+                <tr>
+                  <td>tx</td>
+                  <td class="tx"></td>
+                </tr>
+                <tr>
+                  <td>=</td>
+                  <td class="total"></td>
+                </tr>
+                <tr>
+                  <td class="rate" colspan="2"></td>
+                </tr>
+              </table>
+            </div>
           </div>
         </div>
-        <div class="grid-section" id="yesterday_stats">
-          <div class="radial">
-            <svg class="donut" width="100" height="100%" viewbox="0 0 42 42">
-              <circle class="donut-hole" cx="21" cy="21" r="15.91549430918952" fill="#fff"></circle>
-              <circle class="donut-ring" cx="21" cy="21" r="15.91549430918952" fill="transparent" stroke="#E0E0E0"></circle>
-              <circle class="donut-segment" cx="21" cy="21" r="15.91549430918952" fill="transparent"></circle>
-              <circle class="donut-segment" cx="21" cy="21" r="15.91549430918952" fill="transparent"></circle>
-            </svg>
-          </div>
-          <div class="content">
-            <h4></h4>
-            <table>
-              <tr>
-                <td>rx</td>
-                <td class="rx"></td>
-              </tr>
-              <tr>
-                <td>tx</td>
-                <td class="tx"></td>
-              </tr>
-              <tr>
-                <td>=</td>
-                <td class="total"></td>
-              </tr>
-              <tr>
-                <td class="rate" colspan="2"></td>
-              </tr>
-            </table>
-          </div>
+        <div id="month-estimate"></div>
+      </div>
+      <div class="stats-card">
+        <h2>All-time stats</h2>
+        <div id="alltimeStats"></div>
+      </div>
+      <div class="stats-card">
+        <h2>Historical Stats</h2>
+        <div class="histStats">
+          <li>Clarkson Mirror Started: October 2002</li>
+          <li>Current Mirror booted up for first time: April 2016</li>
+          <li>1.0PB reached on New Mirror: January 5, 2018 at 6pm EST</li>
         </div>
-        <div class="grid-section" id="month_stats">
-          <div class="radial">
-            <svg class="donut" width="100" height="100%" viewbox="0 0 42 42">
-              <circle class="donut-hole" cx="21" cy="21" r="15.91549430918952" fill="#fff"></circle>
-              <circle class="donut-ring" cx="21" cy="21" r="15.91549430918952" fill="transparent" stroke="#E0E0E0"></circle>
-              <circle class="donut-segment" cx="21" cy="21" r="15.91549430918952" fill="transparent"></circle>
-              <circle class="donut-segment" cx="21" cy="21" r="15.91549430918952" fill="transparent"></circle>
-            </svg>
-          </div>
-          <div class="content">
-            <h4></h4>
-            <table>
-              <tr>
-                <td>rx</td>
-                <td class="rx"></td>
-              </tr>
-              <tr>
-                <td>tx</td>
-                <td class="tx"></td>
-              </tr>
-              <tr>
-                <td>=</td>
-                <td class="total"></td>
-              </tr>
-              <tr>
-                <td class="rate" colspan="2"></td>
-              </tr>
-            </table>
-          </div>
-        </div>
-        <div class="grid-section" id="prev_month_stats">
-          <div class="radial">
-            <svg class="donut" width="100" height="100%" viewbox="0 0 42 42">
-              <circle class="donut-hole" cx="21" cy="21" r="15.91549430918952" fill="#fff"></circle>
-              <circle class="donut-ring" cx="21" cy="21" r="15.91549430918952" fill="transparent" stroke="#E0E0E0"></circle>
-              <circle class="donut-segment" cx="21" cy="21" r="15.91549430918952" fill="transparent"></circle>
-              <circle class="donut-segment" cx="21" cy="21" r="15.91549430918952" fill="transparent"></circle>
-            </svg>
-          </div>
-          <div class="content">
-            <h4></h4>
-            <table>
-              <tr>
-                <td>rx</td>
-                <td class="rx"></td>
-              </tr>
-              <tr>
-                <td>tx</td>
-                <td class="tx"></td>
-              </tr>
-              <tr>
-                <td>=</td>
-                <td class="total"></td>
-              </tr>
-              <tr>
-                <td class="rate" colspan="2"></td>
-              </tr>
-            </table>
+      </div>
+      <div class="stats-card">
+        <h2>Path to 5PB</h2>
+        <div id="pb-container">
+          <div class="progressbar">
+            <div class="progressbar--filled"></div>
           </div>
         </div>
       </div>
-      <div id="month-estimate"></div>
-      <h2>All-time stats</h2>
-      <div id="alltimeStats"></div>
-      <h2>Historical Stats</h2>
-      <div class="histStats">
-        <li>Clarkson Mirror Started: October 2002</li>
-        <li>Current Mirror booted up for first time: April 2016</li>
-        <li>1.0PB reached on New Mirror: January 5, 2018 at 6pm EST</li>
-      </div>
-      <h2>Path to 5PB</h2>
-      <div id="pb-container">
-        <div class="progressbar">
-          <div class="progressbar--filled"></div>
+      <div class="stats-card">
+        <h2>Monthly Stats</h2>
+        <div class="graph-container">
+          <div class="graph-options">Last 12 Months</div>
+          <div class="graph-content" id="month-graph"></div>
+          <div class="table-content" id="month-table"></div>
         </div>
       </div>
-      <h2>Monthly Stats</h2>
-      <div class="graph-container">
-        <div class="graph-options">Last 12 Months</div>
-        <div class="graph-content" id="month-graph"></div>
-        <div class="table-content" id="month-table"></div>
-      </div>
-      <h2>Weekly Stats</h2>
-      <div class="graph-container">
-        <div class="graph-options">Last 7 days</div>
-        <div class="graph-content" id="week-graph"></div>
-        <div class="table-content" id="week-table"></div>
-      </div>
-      <h2>Hourly Stats</h2>
-      <div class="graph-container">
-        <div class="graph-options">Last 24 hours</div>
-        <div class="graph-content" id="hour-graph"></div>
-        <div class="table-content" id="hour-table"></div>
-      </div>
-      <h2>Distro Usage</h2>
-      <div id="distusage">
-        <div id="distusage-chart"></div>
-        <div id="distusage-table" class="table-content">
-          <div class="graph-options">Yesterday</div>
+      <div class="stats-card">
+        <h2>Weekly Stats</h2>
+        <div class="graph-container">
+          <div class="graph-options">Last 7 days</div>
+          <div class="graph-content" id="week-graph"></div>
+          <div class="table-content" id="week-table"></div>
         </div>
       </div>
-      <p>View daily bandwidth stats categorized to each repository for distros / software.</p>
-      <a href="/distrousage/distrousage_latest.txt">Latest</a>
-      <br>
-      <a href="/distrousage/archive">Archive</a>
+      <div class="stats-card">
+        <h2>Hourly Stats</h2>
+        <div class="graph-container">
+          <div class="graph-options">Last 24 hours</div>
+          <div class="graph-content" id="hour-graph"></div>
+          <div class="table-content" id="hour-table"></div>
+        </div>
+      </div>
+      <div class="stats-card">
+        <h2>Distro Usage</h2>
+        <div id="distusage">
+          <div id="distusage-chart"></div>
+          <div id="distusage-table" class="table-content">
+            <div class="graph-options">Yesterday</div>
+          </div>
+        </div>
+        <p>View daily bandwidth stats categorized to each repository for distros / software.</p>
+        <a href="/distrousage/distrousage_latest.txt">Latest</a>
+        <br>
+        <a href="/distrousage/archive">Archive</a>
+      </div>
       <p style="text-align:center; font-size: 80%;">MirrorBand V1.1</p>
     </div>
   </div>
