fixed ampersand on Gentoo listing

--- a/distributions.html
+++ b/distributions.html
@@ -289,7 +289,7 @@ deb-src http://mirror.clarkson.edu/debian-security stretch/updates main
             <a href="./gentoo/releases/">http://mirror.clarkson.edu/archlinux/gentoo/releases/</a>
             <br>
             <h5>HTTP:</h5>
-            <a href="./gentoo/">http://mirror.clarkson.edu/gentoo/</a> amp;
+            <a href="./gentoo/">http://mirror.clarkson.edu/gentoo/</a> &amp;
             <a href="./gentoo-portage/">http://mirror.clarkson.edu/gentoo-portage/</a>
             <h5>Rsync:</h5>rsync://mirror.clarkson.edu/gentoo
             <br>
