Updating menu-button to toggle icons

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <h1 class="left">
         <a href="index.html">Mirror</a>
       </h1>
-      <i class="fa fa-bars menu-button"></i>
+      <i id="menu-button" class="fa fa-bars"></i>
     </div>
     <nav id="navdesktop">
       <div class="container">
