--- a/history.html
+++ b/history.html
@@ -37,7 +37,7 @@
       <h1 class="left">
         <a href="index.html">Mirror</a>
       </h1>
-      <i class="fa fa-bars menu-button"></i>
+      <i id="menu-button" class="fa fa-bars"></i>
     </div>
     <nav id="navdesktop">
       <div class="container">
