Added Artix Linux

--- a/distributions.html
+++ b/distributions.html
@@ -96,6 +96,9 @@
               <a href="#arch">Arch Linux</a>
             </li>
             <li>
+              <a href="#artix">Artix Linux</a>
+            </li>
+            <li>
               <a href="#centos">CentOS</a>
             </li>
             <li>
@@ -188,6 +191,18 @@
                 <span class="file">/etc/pacman.d/mirrorlist</span> and add the following line:</p>
               <pre>Server = http://mirror.clarkson.edu/archlinux/$repo/os/$arch</pre>
             </details>
+          </div>
+          <div class="distro" id="artix">
+            <h3>Artix Linux (Official Mirror)</h3>
+            <h5>HTTP:</h5>
+            <a href="./artix-linux/">http://mirror.clarkson.edu/artix-linux/</a>
+            <br>
+            <br>
+            <h5>Upstream Mirror:</h5>
+            <a href="http://mirror1.artixlinux.org">mirror1.artixlinux.org</a>
+            <br>
+            <h5>Homepage:</h5>
+            <a href="https://artixlinux.org/">https://artixlinux.org/</a>
           </div>
           <div class="distro" id="centos">
             <h3>CentOS (Official Mirror)</h3>
