--- a/distributions.html
+++ b/distributions.html
@@ -291,7 +291,7 @@ deb-src http://mirror.clarkson.edu/debian-security stretch/updates main
           <div class="distro" id="gentoo">
             <h3>Gentoo</h3>
             <h5>ISOs:</h5>
-            <a href="./gentoo/releases/">http://mirror.clarkson.edu/archlinux/gentoo/releases/</a>
+            <a href="./gentoo/releases/">http://mirror.clarkson.edu/gentoo/releases/</a>
             <br>
             <h5>HTTP:</h5>
             <a href="./gentoo/">http://mirror.clarkson.edu/gentoo/</a> &amp;
