Adding MS-DOS to software page

--- a/software.html
+++ b/software.html
@@ -123,6 +123,9 @@
               <a href="#linux">Linux</a>
             </li>
             <li>
+              <a href="#msdos">MS-DOS</a>
+            </li>
+            <li>
               <a href="#odroid">Odroid Packages</a>
             </li>
             <li>
@@ -266,6 +269,14 @@
             <br>
             <h5>Homepage:</h5>
             <a href="http://kernel.org">http://kernel.org</a>
+          </section>
+          <section id="msdos">
+            <h3>MS-DOS</h3>
+            <h5>HTTP:</h5>
+            <a href="./MS-DOS/">http://mirror.clarkson.edu/MS-DOS/</a>
+            <br>
+            <h5>Homepage:</h5>
+            <a href="https://github.com/Microsoft/MS-DOS">https://github.com/Microsoft/MS-DOS</a>
           </section>
           <section id="odroid">
             <h3>Odroid Packages</h3>
